Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18846

BUG: unable to handle kernel paging request at fffffffffffffffb

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

    Description

      [161449.025854] LDISKFS-fs warning (device dm-6): ldiskfs_dx_find_entry:1948: inode #77032705: lblock 1464: comm mdt05_009: error -5 reading directory block
      [161449.032733] LDISKFS-fs warning (device dm-6): ldiskfs_dx_find_entry:1948: inode #77032705: lblock 6613: comm mdt05_009: error -5 reading directory block
      [161449.183878] BUG: unable to handle kernel paging request at fffffffffffffffb
      [161449.185755] PGD 2a3bc12067 P4D 2a3bc13067 PUD 2a3bc15067 PMD 0
      [161449.187200] Oops: 0002 [#1] SMP NOPTI
      [161449.188183] CPU: 23 PID: 2605567 Comm: mdt05_009 Kdump: loaded Tainted: G        W  OE     -------- -  - 4.18.0-553.40.1.el8_lustre.ddn17.x86_64 #1
      [161449.191039] Hardware name: DDN SFA400X3E, BIOS 1.16.3-20250223_002156-co-sf-pe-142 04/01/2014
      [161449.192952] RIP: 0010:__iam_path_lookup+0x64/0x1d0 [osd_ldiskfs]
      [161449.194397] Code: 85 c0 0f 88 6c 01 00 00 4c 8b 7c 24 10 45 31 e4 49 8b 46 30 31 d2 4c 89 f9 89 ee 4c 89 ef 48 8b 40 20 e8 cf 05 6e d7 49 8b 17 <f0> 48 0f ba 2a 1c 73 0f 48 8b 0a f7 c1 00 00 00 10 74 ed f3 90 eb
      [161449.198542] RSP: 0018:ff3852de107c3790 EFLAGS: 00010202
      [161449.199839] RAX: fffffffffffffffb RBX: ff2da9dc0d478338 RCX: ff2da9f5824b9800
      [161449.201495] RDX: fffffffffffffffb RSI: ff3852de107c3710 RDI: ffffffff9a006d18
      [161449.203150] RBP: 0000000000000202 R08: ff2daa293b1f4278 R09: 0000000001141692
      [161449.204795] R10: 0000000000000000 R11: 00000000000006c8 R12: 0000000000000001
      [161449.206440] R13: ff2da9dd9e230a08 R14: ff2da9dd9e230a98 R15: ff2da9dc0d478370
      [161449.208094] FS:  0000000000000000(0000) GS:ff2daa293b1c0000(0000) knlGS:0000000000000000
      [161449.209921] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
      [161449.211290] CR2: fffffffffffffffb CR3: 0000002a3bc10001 CR4: 0000000000771ee0
      [161449.212957] PKRU: 55555554
      [161449.213745] Call Trace:
      [161449.214471]  ? __die_body+0x1a/0x60
      [161449.215406]  ? no_context+0x1ba/0x3f0
      [161449.216367]  ? __schedule+0x2d9/0x870
      [161449.217326]  ? __bad_area_nosemaphore+0x157/0x180
      [161449.218497]  ? do_page_fault+0x37/0x12d
      [161449.219493]  ? page_fault+0x1e/0x30
      [161449.220424]  ? __iam_path_lookup+0x64/0x1d0 [osd_ldiskfs]
      [161449.221765]  __iam_it_get+0xa1/0x1d0 [osd_ldiskfs]
      [161449.222966]  ? srso_alias_return_thunk+0x5/0xfcdfd
      [161449.224154]  iam_it_get+0x25/0x170 [osd_ldiskfs]
      [161449.225315]  __osd_oi_lookup+0x22a/0x400 [osd_ldiskfs]
      [161449.226573]  ? srso_alias_return_thunk+0x5/0xfcdfd
      [161449.227747]  osd_ea_lookup_rec.isra.109+0x78f/0xc70 [osd_ldiskfs]
      [161449.229192]  ? osd_index_ea_lookup+0x2f2/0x770 [osd_ldiskfs]
      [161449.230565]  ? srso_alias_return_thunk+0x5/0xfcdfd
      [161449.231739]  osd_index_ea_lookup+0x2f2/0x770 [osd_ldiskfs]
      [161449.233066]  ? srso_alias_return_thunk+0x5/0xfcdfd
      [161449.234230]  ? __mdd_permission_internal+0x39/0xa20 [mdd]
      [161449.235537]  __mdd_lookup.isra.21+0x286/0x370 [mdd]
      [161449.236746]  ? srso_alias_return_thunk+0x5/0xfcdfd
      [161449.237922]  mdd_lookup+0x10d/0x150 [mdd]
      [161449.238945]  mdt_reint_open+0x1a4a/0x31d0 [mdt]
      [161449.240098]  ? srso_alias_return_thunk+0x5/0xfcdfd
      [161449.241266]  ? srso_alias_return_thunk+0x5/0xfcdfd
      [161449.242430]  ? ucred_set_audit_enabled.isra.17+0x1d/0x50 [mdt]
      [161449.243849]  mdt_reint_rec+0x127/0x260 [mdt]
      [161449.244944]  mdt_reint_internal+0x4ac/0x7a0 [mdt]
      [161449.246126]  mdt_intent_open+0x128/0x3c0 [mdt]
      [161449.247263]  ? mdt_intent_fixup_resent+0x200/0x200 [mdt]
      [161449.248569]  mdt_intent_opc+0x452/0xa80 [mdt]
      [161449.249689]  ? lprocfs_counter_add+0x10e/0x180 [obdclass]
      [161449.251025]  mdt_intent_policy+0x1fd/0x390 [mdt]
      [161449.252191]  ldlm_lock_enqueue+0x3a8/0x800 [ptlrpc]
      [161449.253463]  ? cfs_hash_bd_add_locked+0x1f/0x90 [libcfs]
      [161449.254743]  ? srso_alias_return_thunk+0x5/0xfcdfd
      [161449.255897]  ldlm_handle_enqueue0+0x79d/0x16c0 [ptlrpc]
      [161449.257253]  tgt_enqueue+0xa4/0x200 [ptlrpc]
      [161449.258390]  tgt_request_handle+0xc9c/0x1990 [ptlrpc]
      [161449.259670]  ? ptlrpc_nrs_req_get_nolock0+0xff/0x1f0 [ptlrpc]
      [161449.261106]  ? srso_alias_return_thunk+0x5/0xfcdfd
      [161449.262255]  ? ptlrpc_update_export_timer+0x3d/0x520 [ptlrpc]
      [161449.263679]  ? srso_alias_return_thunk+0x5/0xfcdfd
      [161449.264834]  ptlrpc_server_handle_request+0x323/0xbd0 [ptlrpc]
      [161449.266270]  ? srso_alias_return_thunk+0x5/0xfcdfd
      [161449.267405]  ? lprocfs_counter_add+0x10e/0x180 [obdclass]
      [161449.268721]  ptlrpc_main+0xb45/0x13a0 [ptlrpc]
      [161449.269874]  ? __schedule+0x2d9/0x870
      [161449.270791]  ? ptlrpc_register_service+0xf30/0xf30 [ptlrpc]
      [161449.272164]  kthread+0x134/0x150
      [161449.272993]  ? set_kthread_struct+0x50/0x50
      [161449.274021]  ret_from_fork+0x1f/0x40
      [161449.274926] Modules linked in: mdd(OE) lod(OE) mdt(OE) osp(OE) ofd(OE) lfsck(OE) ost(OE) mgs(OE) mgc(OE) osd_ldiskfs(OE) ldiskfs(OE) lquota(OE) lustre(OE) mdc(OE) lov(OE) osc(OE) lmv(OE) fid(OE) fld(OE) ko2iblnd(OE) ptlrpc(OE) obdclass(OE) lnet(OE) libcfs(OE) sctp ip6_udp_tunnel udp_tunnel libcrc32c rdma_ucm(OE) rdma_cm(OE) iw_cm(OE) ib_ipoib(OE) ib_cm(OE) ib_umad(OE) sunrpc intel_rapl_msr intel_rapl_common kvm_amd bochs ccp drm_vram_helper drm_ttm_helper kvm iTCO_wdt iTCO_vendor_support ttm drm_kms_helper syscopyarea irqbypass sysfillrect sysimgblt crct10dif_pclmul crc32_pclmul joydev ghash_clmulni_intel drm i2c_i801 pcspkr lpc_ich i6300esb ext4 mbcache jbd2 sd_mod t10_pi sr_mod mlx5_ib(OE) cdrom ib_uverbs(OE) ib_core(OE) sg mlx5_core(OE) ahci mlxfw(OE) tls libahci pci_hyperv_intf psample virtio_net bnxt_en mlxdevm(OE) libata crc32c_intel net_failover serio_raw virtio_blk mlx_compat(OE) virtio_scsi failover dm_mirror dm_region_hash dm_log dm_mod
      [161449.292732] CR2: fffffffffffffffb
      

      Attachments

        Activity

          People

            dongyang Dongyang Li
            dongyang Dongyang Li
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: