LU-18846 osd-ldiskfs: fix error handling in iam_lookup_try

We should check the return code from id_node_read(),
frame->bh could be -EIO or NULL, using it with iam_lock_bh()
could end up crashing.

Change-Id: If9899e2650c6949913217656f803db64c3a0c6fa
Test-Parameters: trivial
Signed-off-by: Li Dongyang <dongyangli@ddn.com>
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/58489
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Alex Zhuravlev <bzzz@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>